--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -1484,8 +1484,8 @@
                         $("#afterNoon").attr('disabled', 'disabled');
                         $("#Origin").attr('disabled', 'disabled');
                         $("#Destination").attr('disabled', 'disabled');
-                        $("#hour").attr('disabled', 'disabled');
-                        $("#minute").attr('disabled', 'disabled');
+                        //$("#hour").attr('disabled', 'disabled');
+                        //$("#minute").attr('disabled', 'disabled');
                         $("#dateRide").attr('disabled', 'disabled');
                         $("#dirBTN").attr('disabled', 'disabled');
                     }
