--- a/Road to Recovery/pages/viewRidePats.html
+++ b/Road to Recovery/pages/viewRidePats.html
@@ -300,7 +300,9 @@
                     GENERAL.RIDEPAT.setRidePatList(JSON.stringify(arr_rides));
                     
                     for (i in arr_rides) {
-
+                        if (arr_rides[i].Pat.DisplayName.includes("אנונימי")) {
+                            arr_rides[i].Pat.DisplayName = arr_rides[i].Pat.DisplayName.replace("אנונימי", "חולה")
+                        }
                         //Change date format
                         var temp = arr_rides[i].Date.substring(arr_rides[i].Date.indexOf("(") + 1);
                         temp = temp.substring(0, temp.indexOf(")"));
