--- a/Road to Recovery/pages/patientForm.html
+++ b/Road to Recovery/pages/patientForm.html
@@ -81,11 +81,11 @@
             height: 100px;
         }
 
-        input[type=text]:focus {
+        input[type=text]:focus, input[type=number]:focus {
             background-color: #FFE684;
         }
 
-        input[type=text], input[type=checkbox], input[type=date] {
+        input[type=text], input[type=checkbox], input[type=date], input[type=number] {
             border-color: #000
         }
 
