--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -487,7 +487,7 @@
         function buildTables(table) {
         
         if (arr_rides[i].Pat.DisplayName.includes("אנונימי")){
-        arr_rides[i].Pat.DisplayName = arr_rides[i].Pat.DisplayName.replace("אנונימי","חולה")
+        arr_rides[i].Pat.DisplayName = "חולה";
         }
             if (arr_rides[i].Status.indexOf("ממתינה לשיבוץ") !==-1 ) {
                 if (isAssistant) {
