Added messages log on viewPatient.html and fixed equipment messages on ridePatForm.html

--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -184,16 +184,17 @@
                 recordsNum = JSON.parse(localStorage.getItem("futurePageLength"));
             }
 
-            tMorning = $('#datatable-morning').DataTable({ "stateDuration": 60 * 60, "columnDefs": [{ targets: 6, className: 'text-left-strong' }]}, { "paging": false }, { "visible": false, "targets": [1] }, { "className": "dt-body-left", "targets": [3] });
-            tAfternoon = $('#datatable-afternoon').DataTable({  "stateDuration": 60 * 60, "columnDefs": [{ targets: 6, className: 'text-left-strong' }]}, { "paging": false }, { "visible": false, "targets": [1] }, { "className": "dt-body-left", "targets": [3] });
+            tMorning = $('#datatable-morning').DataTable({ "stateDuration": 60 * 60, "columnDefs": [{ targets: 7, className: 'text-left-strong' }]}, { "paging": false }, { "visible": false, "targets": [1] }, { "className": "dt-body-left", "targets": [3] });
+            tAfternoon = $('#datatable-afternoon').DataTable({  "stateDuration": 60 * 60, "columnDefs": [{ targets: 7, className: 'text-left-strong' }]}, { "paging": false }, { "visible": false, "targets": [1] }, { "className": "dt-body-left", "targets": [3] });
             tFuture = $('#datatable-future').DataTable({
                 
                 "stateDuration": 60 * 60, //saves duration state for 1 hour
-                "columnDefs": [{ targets: 7, className: 'text-left-strong' }],
+                "columnDefs": [{ targets: 8, className: 'text-left-strong' }],
                 "iDisplayLength": recordsNum,
                 "aoColumns": [{
                     "sType": "customdatesort"
                 },
+                    null,
                     null,
                     null,
                     null,
@@ -207,11 +208,12 @@
             tTomorrow = $('#datatable-tomorrow').DataTable({
 
                 "stateDuration": 60 * 60, //saves duration state for 1 hour
-                "columnDefs": [{ targets: 7, className: 'text-left-strong' }],
+                "columnDefs": [{ targets: 8, className: 'text-left-strong' }],
                 "iDisplayLength": recordsNum,
                 "aoColumns": [{
                     "sType": "customdatesort"
                 },
+                    null,
                     null,
                     null,
                     null,
@@ -492,18 +494,18 @@
             if (arr_rides[i].Status.indexOf("ממתינה לשיבוץ") !==-1 ) {
                 if (isAssistant) {
                     if (table.context[0].sTableId != "datatable-future" && table.context[0].sTableId != "datatable-tomorrow") {
-                        table.row.add([time, arr_rides[i].Origin.EnglishName, arr_rides[i].Destination.EnglishName, arr_rides[i].Pat.EnglishName, "אין!<br/>None!",  "Waiting for a driver", arr_rides[i].Origin.EnglishName + " - " + arr_rides[i].Destination.EnglishName, btnStr, arr_rides[i].Pat.IsAnonymous]).draw(false);
+                        table.row.add([time, arr_rides[i].Origin.EnglishName, arr_rides[i].Destination.EnglishName, arr_rides[i].Pat.EnglishName, "אין!<br/>None!",  "Waiting for a driver", arr_rides[i].LastModified.slice(0, -3), arr_rides[i].Origin.EnglishName + " - " + arr_rides[i].Destination.EnglishName, btnStr, arr_rides[i].Pat.IsAnonymous]).draw(false);
                     }
                     else {
-                        table.row.add([date2, time, arr_rides[i].Origin.EnglishName, arr_rides[i].Destination.EnglishName, arr_rides[i].Pat.EnglishName, "אין!<br/>None!", "Waiting for a driver",arr_rides[i].Origin.EnglishName + " - " + arr_rides[i].Destination.EnglishName, btnStr, arr_rides[i].Pat.IsAnonymous]).draw(false);
+                        table.row.add([date2, time, arr_rides[i].Origin.EnglishName, arr_rides[i].Destination.EnglishName, arr_rides[i].Pat.EnglishName, "אין!<br/>None!", "Waiting for a driver", arr_rides[i].LastModified.slice(0, -3), arr_rides[i].Origin.EnglishName + " - " + arr_rides[i].Destination.EnglishName, btnStr, arr_rides[i].Pat.IsAnonymous]).draw(false);
                     }
                 }
                 else {
                     if (table.context[0].sTableId != "datatable-future" && table.context[0].sTableId != "datatable-tomorrow") {
-                        table.row.add([time, arr_rides[i].Origin.Name, arr_rides[i].Destination.Name, arr_rides[i].Pat.DisplayName, "אין!<br/>None!", arr_rides[i].Status,arr_rides[i].Origin.EnglishName + " - " + arr_rides[i].Destination.EnglishName, btnStr, arr_rides[i].Pat.IsAnonymous]).draw(false);
+                        table.row.add([time, arr_rides[i].Origin.Name, arr_rides[i].Destination.Name, arr_rides[i].Pat.DisplayName, "אין!<br/>None!", arr_rides[i].Status,arr_rides[i].LastModified.slice(0, -3),arr_rides[i].Origin.EnglishName + " - " + arr_rides[i].Destination.EnglishName, btnStr, arr_rides[i].Pat.IsAnonymous]).draw(false);
                     }
                     else {
-                        table.row.add([date2, time, arr_rides[i].Origin.Name, arr_rides[i].Destination.Name, arr_rides[i].Pat.DisplayName, "אין!<br/>None!", arr_rides[i].Status,arr_rides[i].Origin.EnglishName + " - " + arr_rides[i].Destination.EnglishName, btnStr, arr_rides[i].Pat.IsAnonymous]).draw(false);
+                        table.row.add([date2, time, arr_rides[i].Origin.Name, arr_rides[i].Destination.Name, arr_rides[i].Pat.DisplayName, "אין!<br/>None!", arr_rides[i].Status,arr_rides[i].LastModified.slice(0, -3),arr_rides[i].Origin.EnglishName + " - " + arr_rides[i].Destination.EnglishName, btnStr, arr_rides[i].Pat.IsAnonymous]).draw(false);
                     }
                 }
             }
@@ -544,18 +546,18 @@
                         s='Delay at the border';
                     }
                     if (table.context[0].sTableId != "datatable-future" && table.context[0].sTableId != "datatable-tomorrow") {
-                        table.row.add([time, arr_rides[i].Origin.EnglishName, arr_rides[i].Destination.EnglishName, arr_rides[i].Pat.EnglishName, drivers, s,arr_rides[i].Origin.EnglishName + " - " + arr_rides[i].Destination.EnglishName, btnStr, arr_rides[i].Pat.IsAnonymous]).draw(false);
+                        table.row.add([time, arr_rides[i].Origin.EnglishName, arr_rides[i].Destination.EnglishName, arr_rides[i].Pat.EnglishName, drivers, s,arr_rides[i].LastModified.slice(0, -3),arr_rides[i].Origin.EnglishName + " - " + arr_rides[i].Destination.EnglishName, btnStr, arr_rides[i].Pat.IsAnonymous]).draw(false);
                     }
                     else {
-                        table.row.add([date2, time, arr_rides[i].Origin.EnglishName, arr_rides[i].Destination.EnglishName, arr_rides[i].Pat.EnglishName, drivers, s,arr_rides[i].Origin.EnglishName + " - " + arr_rides[i].Destination.EnglishName, btnStr, arr_rides[i].Pat.IsAnonymous]).draw(false);
+                        table.row.add([date2, time, arr_rides[i].Origin.EnglishName, arr_rides[i].Destination.EnglishName, arr_rides[i].Pat.EnglishName, drivers, s,arr_rides[i].LastModified.slice(0, -3),arr_rides[i].Origin.EnglishName + " - " + arr_rides[i].Destination.EnglishName, btnStr, arr_rides[i].Pat.IsAnonymous]).draw(false);
                     }
                 }
                 else {
                     if (table.context[0].sTableId != "datatable-future" && table.context[0].sTableId != "datatable-tomorrow") {
-                        table.row.add([time, arr_rides[i].Origin.Name, arr_rides[i].Destination.Name, arr_rides[i].Pat.DisplayName, drivers, arr_rides[i].Status,arr_rides[i].Origin.EnglishName + " - " + arr_rides[i].Destination.EnglishName, btnStr, arr_rides[i].Pat.IsAnonymous]).draw(false);
+                        table.row.add([time, arr_rides[i].Origin.Name, arr_rides[i].Destination.Name, arr_rides[i].Pat.DisplayName, drivers, arr_rides[i].Status,arr_rides[i].LastModified.slice(0, -3),arr_rides[i].Origin.EnglishName + " - " + arr_rides[i].Destination.EnglishName, btnStr, arr_rides[i].Pat.IsAnonymous]).draw(false);
                     }
                     else {
-                        table.row.add([date2, time, arr_rides[i].Origin.Name, arr_rides[i].Destination.Name, arr_rides[i].Pat.DisplayName, drivers, arr_rides[i].Status,arr_rides[i].Origin.EnglishName + " - " + arr_rides[i].Destination.EnglishName, btnStr, arr_rides[i].Pat.IsAnonymous]).draw(false);
+                        table.row.add([date2, time, arr_rides[i].Origin.Name, arr_rides[i].Destination.Name, arr_rides[i].Pat.DisplayName, drivers, arr_rides[i].Status,arr_rides[i].LastModified.slice(0, -3),arr_rides[i].Origin.EnglishName + " - " + arr_rides[i].Destination.EnglishName, btnStr, arr_rides[i].Pat.IsAnonymous]).draw(false);
                     }
                 }
   
@@ -1026,8 +1028,9 @@
                                                             <th class="middle" title="Patient  المريض">החולה</th>
                                                             <th class="middle" title="Driver  السائق">המסיע</th>
                                                             <th class="middle" title="Status  حالة السفرية">סטטוס ההסעה</th>
+                                                            <th class="customWidth middle" title="Last modified">עודכן לאחרונה</th>
                                                             <th class="customWidth middle" title="نقطة الانطلاق - نقطة الوصول Origin - Destination">Origin - Destination</th>
-                                                            <th class="middle" title="Actions  اعمال">פעולות</th>
+                                                            <th class="SmallcustomWidth  middle" title="Actions  اعمال">פעולות</th>
                                                         </tr>
                                                     </thead>
                                                     <tbody></tbody>
@@ -1050,8 +1053,9 @@
                                                             <th class="middle" title="Patient  المريض">החולה</th>
                                                             <th class="middle" title="Driver  السائق">המסיע</th>
                                                             <th class="middle" title="Status  حالة السفرية">סטטוס ההסעה</th>
+                                                            <th class="customWidth middle" title="Last modified">עודכן לאחרונה</th>
                                                             <th class="customWidth middle" title="نقطة الانطلاق - نقطة الوصول Origin - Destination">Origin - Destination</th>
-                                                            <th class="middle" title="Actions  اعمال">פעולות</th>
+                                                            <th class="SmallcustomWidth middle" title="Actions  اعمال">פעולות</th>
                                                         </tr>
                                                     </thead>
                                                     <tbody></tbody>
@@ -1076,8 +1080,9 @@
                                                             <th class="middle" title="Patient  المريض">החולה</th>
                                                             <th class="middle" title="Driver  السائق">המסיע</th>
                                                             <th class="middle" title="Status  حالة السفرية">סטטוס ההסעה</th>
+                                                            <th class="customWidth middle" title="Last modified">עודכן לאחרונה</th>
                                                             <th class="customWidth middle" title="نقطة الانطلاق - نقطة الوصول Origin - Destination">Origin - Destination</th>
-                                                            <th class="middle" title="Actions  اعمال">פעולות</th>
+                                                            <th class="SmallcustomWidth middle" title="Actions  اعمال">פעולות</th>
                                                         </tr>
                                                     </thead>
                                                     <tbody></tbody>
@@ -1102,8 +1107,9 @@
                                                             <th class="middle" title="Patient  المريض">החולה</th>
                                                             <th class="middle" title="Driver  السائق">המסיע</th>
                                                             <th class="middle" title="Status  حالة السفرية">סטטוס ההסעה</th>
+                                                            <th class="customWidth middle" title="Last modified">עודכן לאחרונה</th>
                                                             <th class="customWidth middle" title="نقطة الانطلاق - نقطة الوصول Origin - Destination">Origin - Destination</th>
-                                                            <th class="middle" title="Actions  اعمال">פעולות</th>
+                                                            <th class="SmallcustomWidth middle" title="Actions  اعمال">פעולות</th>
                                                         </tr>
                                                     </thead>
                                                     <tbody></tbody>
@@ -1190,7 +1196,7 @@
     <script type="text/javascript">
 
         TableManageButtons.init();
-
+        
     </script>
 </body>
 </html>
