--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -41,6 +41,8 @@
     <script src="lib/lz-string.js"></script>
     <script src="lib/master.js"></script>
 
+    <script src="lib/reports.js"></script>
+
     <script src="assets/js/jquery.min.js"></script>
 
     <script src="dataTables.js"></script>
@@ -57,8 +59,41 @@
     <script src="lib/includeHTML.js"></script>
     <script src="https://cdn.datatables.net/plug-ins/1.10.19/sorting/date-de.js"></script>
 
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <style>
+        .ui-autocomplete {
+            max-height: 100px;
+            overflow-y: auto;
+            /* prevent horizontal scrollbar */
+            overflow-x: hidden;
+        }
+        /* IE 6 doesn't support max-height
+        * we use height instead, but this forces the menu to always be this tall
+        */
+        * html .ui-autocomplete {
+            height: 100px;
+        }
 
-   
+        input[type=text]:focus {
+            background-color: #FFE684;
+        }
+
+        .duplicateDisplay {
+            display: none;
+        }
+
+        .duplicateDisplayOnShow {
+            background-color: #F8F8B5
+        }
+
+        input[type=text], input[type=checkbox], input[type=date], #statusRidePat, #Origin, #Destination, #hour, #minute {
+            border-color: #000
+        }
+    </style>
+
+
+
     <script>
         var tbl;
         var arr_rides;
@@ -81,39 +116,6 @@
 
         $(document).ready(function () {
 
-            $.ajax({
-                dataType: "json",
-                url: "WebService.asmx/getLocations",
-                contentType: "application/json; charset=utf-8",
-                beforeSend: function (xhr) {
-                    xhr.setRequestHeader("Content-Encoding", "gzip");
-                },
-                type: "POST",
-                data: "",
-                success: function (data) {
-                    let fullList = JSON.parse(data.d)
-                    for (loc of fullList) {
-                        if (loc.Area.includes("דרום") || loc.Area.includes("ארז")) {
-                            southLocations.push(loc.Name);
-                        }
-                        if (loc.Area.includes("מרכז") || loc.Area.includes("תרקומיא") || loc.Area.includes("ירושלים")) {
-                            centerLocations.push(loc.Name);
-                        }
-                        if (loc.Area.includes("צפון")) {
-                            northLocations.push(loc.Name);
-                        }
-                    }
-
-                    locations = {
-                        South: southLocations,
-                        Center: centerLocations,
-                        North: northLocations
-                    }
-
-                }, error: function (error) {
-                    console.log(error);
-                }
-            });
 
 
             $("#rp_vl_ride_month").click(on_report_click);
@@ -191,218 +193,12 @@
                 $('#saturday').prop('checked', JSON.parse(localStorage.saturday));
             }
 
-            refreshTable();
+
 
 
         });
 
-        function on_report_click(event) {
-            var report_type = event.target.id;
-            $("#params_ph").text("You clicked " + report_type);
-            
-        }
 
-        function refreshTable() {
-
-            var south = JSON.parse(localStorage.south);
-
-            var center = JSON.parse(localStorage.center);
-
-            var north = JSON.parse(localStorage.north);
-
-            weekdays = [];
-            var sunday = JSON.parse(localStorage.sunday);
-            if (sunday)
-                weekdays.push("א");
-            var monday = JSON.parse(localStorage.monday);
-            if (monday)
-                weekdays.push("ב");
-            var tuesday = JSON.parse(localStorage.tuesday);
-            if (tuesday)
-                weekdays.push("ג");
-            var wednesday = JSON.parse(localStorage.wednesday);
-            if (wednesday)
-                weekdays.push("ד");
-            var thursday = JSON.parse(localStorage.thursday);
-            if (thursday)
-                weekdays.push("ה");
-            var friday = JSON.parse(localStorage.friday);
-            if (friday)
-                weekdays.push("ו");
-            var saturday = JSON.parse(localStorage.saturday);
-            if (saturday)
-                weekdays.push("ש");
-
-            ridesToShow = [];
-            allRides = [];
-            var volunteerId = 14535;  // @@ HARDCODED for now.
-            // @@ $('#wait').show();
-            $.ajax({
-                dataType: "json",
-                url: "WebService.asmx/GetReportVolunteerRidesXXX",
-                contentType: "application/json; charset=utf-8",
-                beforeSend: function (xhr) {
-                    xhr.setRequestHeader("Content-Encoding", "gzip");
-                },
-                type: "POST",
-                data: JSON.stringify({ volunteerId: volunteerId, maxDays: -2 }),// -2 means this week rides
-                success: function (data) {
-                    $('#wait').hide();
-                    arr_rides = JSON.parse(data.d);
-
-
-                    for (i in arr_rides) {
-
-                        //Change date format
-                        var temp = arr_rides[i].Date.substring(arr_rides[i].Date.indexOf("(") + 1);
-                        temp = temp.substring(0, temp.indexOf(")"));
-                        var date = new Date(parseInt(temp));
-
-                        var HEBday = getDayString(date.getDay());
-
-                        if (arr_rides[i].Drivers.length != 0) {
-                            driverName = arr_rides[i].Drivers[0].DisplayName;
-                        }
-                        destinationName = arr_rides[i].Destination.Name;
-                        originName = arr_rides[i].Origin.Name;
-
-
-                        if (date.getDate() < 10) {
-                            day = "0" + date.getDate();
-                        } else day = date.getDate();
-
-
-                        if (date.getMonth() + 1 < 10) {
-                            month = "0" + (date.getMonth() + 1);
-                        } else month = date.getMonth() + 1;
-
-
-                        var d = new Date();
-                        var timezoneOffset = 0; // The difference between UTC and Israel
-
-                        if ((date.getHours() - timezoneOffset) < 10) {
-                            hours = "0" + (date.getHours() - timezoneOffset);
-                        } else hours = (date.getHours() - timezoneOffset);
-
-                        if (date.getMinutes() < 10) {
-                            minutes = "0" + date.getMinutes();
-                        } else minutes = date.getMinutes();
-
-                        if (arr_rides[i].Pat.DisplayName.includes("אנונימי")) {
-                            patDisplayName = "חולה";
-                        } else {
-                            patDisplayName = arr_rides[i].Pat.DisplayName;
-                        }
-
-                        if (arr_rides[i].Pat.EscortedList.length != 0) {
-                            patDisplayName += " + " + arr_rides[i].Pat.EscortedList.length;
-                        }
-
-                        date2 = HEBday + " " + day + "/" + month + "/" + date.getUTCFullYear() % 2000;
-                        time = hours + ":" + minutes;
-
-
-                        if (time == "22:14") { //22:14 is the default time to show afternoon אחה''צ
-
-                            time = " אחה\"צ";
-                        }
-
-                        let southRide = false;
-                        let centerRide = false;
-                        let northRide = false;
-
-                        if (locations.South.includes(arr_rides[i].Destination.Name) || locations.South.includes(arr_rides[i].Origin.Name))
-                            southRide = true;
-                        if (locations.Center.includes(arr_rides[i].Destination.Name) || locations.Center.includes(arr_rides[i].Origin.Name))
-                            centerRide = true;
-                        if (locations.North.includes(arr_rides[i].Destination.Name) || locations.North.includes(arr_rides[i].Origin.Name))
-                            northRide = true;
-
-
-                        var Ride = {};
-
-                        if (arr_rides[i].Status == "ממתינה לשיבוץ") {
-                            drivers = arr_rides[i].Status;
-                        } else {
-                            drivers = arr_rides[i].Drivers[0].DisplayName;
-                        }
-
-                        Ride = {
-                            Date: date2,
-                            OriginName: arr_rides[i].Origin.Name,
-                            DestinationName: arr_rides[i].Destination.Name,
-                            Time: time,
-                            PatDisplayName: patDisplayName,
-                            Coordinator: arr_rides[i].Coordinator.DisplayName,
-                            Drivers: drivers,
-                            SouthRide: southRide,
-                            CenterRide: centerRide,
-                            NorthRide: northRide,
-                            Day: date2.slice(4, 5)
-                        }
-
-
-                        allRides.push(Ride);
-
-
-
-                        if (south && Ride.SouthRide && weekdays.includes(Ride.Day)) {
-                            ridesToShow.push(Ride);
-                            continue;
-                        }
-                        if (center && Ride.CenterRide && weekdays.includes(Ride.Day)) {
-                            ridesToShow.push(Ride);
-                            continue;
-                        }
-                        if (north && Ride.NorthRide && weekdays.includes(Ride.Day)) {
-                            ridesToShow.push(Ride);
-                            continue;
-                        }
-
-
-                    }
-
-                    tbl = $('#weeklyRides').DataTable({
-                        pageLength: 500,
-                        bLengthChange: false,
-                        data: ridesToShow,
-                        destroy: true,
-                        columnDefs: [
-                            { "orderData": [0, 3], "targets": 0 }],
-                        columns: [
-                            { data: "Date" },
-                            { data: "OriginName" },
-                            { data: "DestinationName" },
-                            { data: "Time" },
-                            { data: "PatDisplayName" },
-                            { data: "Coordinator" },
-                            { data: "Drivers" },
-
-                        ],
-                        createdRow: function (row, data, dataIndex) {
-                            if (data.Date.includes("א") || data.Date.includes("ג") || data.Date.includes("ה") || data.Date.includes("ש"))
-                                $(row).css('background-color', '#f1f1f1');
-                            else $(row).css('background-color', '#ffffff')
-                        },
-                        rowCallback: function (row, data, index) {
-                            if (data.Drivers == "ממתינה לשיבוץ") {
-                                $(row).find('td:eq(6)').css('background-color', '#FBD4B4');
-                            }
-                        }
-                    });
-                },
-                error: function (err) {
-                    $('#wait').hide();
-                    // @@ alert("Error in GetRidePatView: " + err.responseText);
-                }
-
-
-            });
-
-
-
-
-        }
 
         function getDayString(num) {
             var day;    //Create a local variable to hold the string
@@ -642,6 +438,29 @@
                 <div class="row">
 
                     <div class="col-sm-12">
+                        <div class="row" name="template_VOLUNTEER">
+                            <!--<form class="form-horizontal" role="form" id="driverForm">-->
+                            <div class="col-sm-12">
+                                <div class="card-box">
+                                    <div class="row" id="flashDiv">
+
+                                        <div class="row m-l-10 m-r-10">
+                                            <div class="col-sm-12">
+                                                <div class="form-group">
+                                                    <label class="col-sm-2 control-label">שם המתנדב</label>
+                                                    <div class="col-sm-6" id="selectDriver">
+                                                        <input placeholder="הזן שם" type="text" id="driver" name="driver" class="form-control ui-autocomplete-input" autocomplete="off" aria-required="true" aria-invalid="false">
+                                                    </div>
+                                                </div>
+
+                                            </div>
+
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -672,7 +491,6 @@
     <script src="../plugins/datatables/dataTables.bootstrap.js"></script>
     <script src="../plugins/datatables/dataTables.buttons.min.js"></script>
     <script src="../plugins/datatables/buttons.bootstrap.min.js"></script>
-    <script src="../plugins/datatables/jszip.min.js"></script>
     <script src="../plugins/datatables/pdfmake.min.js"></script>
     <script src="../plugins/datatables/vfs_fonts.js"></script>
     <script src="../plugins/datatables/buttons.html5.min.js"></script>
@@ -692,12 +510,8 @@
 
     <script src="assets/js/jquery.core.js"></script>
     <script src="assets/js/jquery.app.js"></script>
-    <!--<script src="cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
-    <script src="cdn.datatables.net/plug-ins/1.10.19/sorting/datetime-moment.js"></script>-->
-    <!--<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>-->
-    <!--<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js"></script>
-    <script src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
-    <script src="//cdn.datatables.net/plug-ins/1.10.12/sorting/datetime-moment.js"></script>-->
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
     <script type="text/javascript">
 
     </script>
