fix equipment table typo

--- a/Road to Recovery/pages/weeklyRides.html
+++ b/Road to Recovery/pages/weeklyRides.html
@@ -466,7 +466,7 @@
                     { data: "DestinationName" },
                     { data: "Time" },
                     { data: "PatDisplayName" },
-                    { data: "Equipement" },
+                    { data: "Equipment" },
                     { data: "Coordinator" },
                     { data: "Drivers" },
                     {
